--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/J-Guidry/J-Guidry.github.io#readme",
   "devDependencies": {
-    "parcel-bundler": "^1.10.3"
+    "bootstrap": "^4.1.3",
+    "parcel-bundler": "^1.10.3",
+    "postcss-modules": "^1.4.1",
+    "sass": "^1.14.3"
   },
   "dependencies": {
     "font-awesome": "^4.7.0"
