--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "J-Guidry.github.io",
+  "name": "Portfolio",
   "version": "1.0.0",
   "description": "My Portfolio of works and where you can contact me.",
   "scripts": {
