--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "parcel build ./src/*.html"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/J-Guidry/J-Guidry.github.io.git"
+    "type": "git"
   },
   "keywords": [],
   "author": "",
